# WoiceFlow

./: .gitignore  README.md  WoiceFlow.spec  build_linux.sh  build_macos.sh  build_windows.bat  install.sh  install_linux.sh  install_macos.sh  install_windows.bat  installer_gui.py  main.py  nohup.out  pyproject.toml  requirements.txt  start.sh  start_prod.sh  woiceflow-setup.iss  woiceflow.sh
.github/workflows/: build.yml
desktop/: README.md  pubspec.yaml
desktop/linux/: CMakeLists.txt
desktop/linux/runner/: my_application.cc
desktop/macos/Runner.xcodeproj/: project.pbxproj
desktop/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
desktop/macos/Runner/Configs/: AppInfo.xcconfig
desktop/windows/: CMakeLists.txt
desktop/windows/runner/: Runner.rc  main.cpp
src/woiceflow/: __init__.py  app.py
src/woiceflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/woiceflow/audio/: recorder.py
src/woiceflow/hotkeys/: listener.py  toggle.py
src/woiceflow/injector/: __init__.py  typer.py
src/woiceflow/speech/: whisper_engine.py
src/woiceflow/text/: formatter.py
src/woiceflow/ui/: __init__.py  overlay.py  tray.py
website/: README.md  package.json
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/app/docs/: layout.tsx  page.tsx
website/src/app/docs/linux/: layout.tsx  page.tsx
website/src/app/docs/macos/: layout.tsx  page.tsx
website/src/app/docs/windows/: layout.tsx  page.tsx
website/src/components/: BoomerangVideoBg.tsx
website/src/components/ui/: terminal.tsx
(+2 files in other folders)
