[project]
name = "woiceflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "loguru>=0.7.3",
    "numpy>=2.4.6",
    "pynput>=1.8.2",
    "pyqt6>=6.11.0",
    "rich>=15.0.0",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "ollama>=0.3.0",
]
